--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,7 +27,7 @@
   }
 
   .magictext{
-    padding-top: 145px;
+    padding-top: 170px;
     padding-right: 100px;
     text-align:center;
     width: 1500px;
